Completed job loop.

--- a/Config/DefaultVPTK.ini
+++ b/Config/DefaultVPTK.ini
@@ -1,2 +1,5 @@
 [CoreRedirects]
++FunctionRedirects=(OldName="LensSolver.ProcessMediaTexture",NewName="LensSolver.OneTimeProcessMediaTexture")
++FunctionRedirects=(OldName="LensSolver.ProcessTexture2D",NewName="LensSolver.OneTimeProcessTexture2D")
 +FunctionRedirects=(OldName="LensSolver.ProcessTexture2DArray",NewName="LensSolver.OneTimeProcessTexture2DArray")
++FunctionRedirects=(OldName="LensSolver.ProcessMediaTextureArray",NewName="LensSolver.OneTimeProcessMediaTextureArray")
