--- a/.gitignore
+++ b/.gitignore
@@ -50,8 +50,8 @@ Binaries/*
 Binaries/**
 Plugins/*/Binaries/*
 
-ThirdParty/lib/**
-ThirdParty/bin/**
+# ThirdParty/lib/**
+# ThirdParty/bin/**
 
 # Builds
 Build/*
