--- a/LensCalibrator.uplugin
+++ b/LensCalibrator.uplugin
@@ -2,7 +2,7 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "VPTK",
+	"FriendlyName": "LensCalibrator",
 	"Description": "",
 	"Category": "Other",
 	"CreatedBy": "",
@@ -15,7 +15,7 @@
 	"Installed": false,
 	"Modules": [
 		{
-			"Name": "VPTK",
+			"Name": "LensCalibrator",
 			"Type": "Runtime",
 			"LoadingPhase": "PostConfigInit"
 		}
