Cleaning up a few things.

--- a/LensCalibrator.uplugin
+++ b/LensCalibrator.uplugin
@@ -1,17 +1,18 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.0",
-	"FriendlyName": "LensCalibrator",
-	"Description": "",
-	"Category": "Other",
-	"CreatedBy": "",
-	"CreatedByURL": "",
-	"DocsURL": "",
+	"VersionName": "0.1",
+	"FriendlyName": "Lens Calibrator",
+	"Description": "Solve for the physical characteristics of your cameras in-engine.",
+	"Category": "Virtual Production",
+	"CreatedBy": "Polypulse LLC",
+	"CreatedByURL": "https://www.polypulse.io",
+	"DocsURL": "https://docs.google.com/document/d/1HNYupII7wy-lZkVENv9LS7f7xqjnMhFPVWmATGc8Xoc/edit?usp=sharing",
 	"MarketplaceURL": "",
-	"SupportURL": "",
+	"SupportURL": "https://forms.gle/K5TPTtTiPdnEHRHZ9",
 	"CanContainContent": true,
-	"IsBetaVersion": false,
+	"IsBetaVersion": true,
+	"IsExperimentalVersion": false,
 	"Installed": false,
 	"Modules": [
 		{
