Got SteamVR working with tracking and without headset.

--- a/LensCalibrator.uplugin
+++ b/LensCalibrator.uplugin
@@ -21,5 +21,11 @@
 			"LoadingPhase": "PostConfigInit",
 			"WhitelistPlatforms": [ "Win64" ]
 		}
+	],
+	"Plugins" : [
+		{
+			"Name": "Composure",
+			"Enabled": true
+		}
 	]
 }
