Fixed scewed up composure scene.

--- a/LensCalibrator.uplugin
+++ b/LensCalibrator.uplugin
@@ -26,6 +26,10 @@
 		{
 			"Name": "Composure",
 			"Enabled": true
+		},
+		{
+			"Name": "EditorScriptingUtilities",
+			"Enabled": true
 		}
 	]
 }
