--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,4 @@
 *.bmp filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
 *.obj filter=lfs diff=lfs merge=lfs -text
+*.7z filter=lfs diff=lfs merge=lfs -text
