--- a/LensCalibrator.uplugin
+++ b/LensCalibrator.uplugin
@@ -30,6 +30,10 @@
 		{
 			"Name": "EditorScriptingUtilities",
 			"Enabled": true
+		},
+		{
+			"Name": "MediaFrameworkUtilities",
+			"Enabled": true
 		}
 	]
 }
