Remvoing EnginePath.txt, the user should add this manually instead.

--- a/.gitignore
+++ b/.gitignore
@@ -73,10 +73,8 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
-
 PluginPackaged/*
-
 Content/TestImages/*
-
-Source/ThirdParty/*
+Source/ThirdParty/**
 OpenCVWrapper.zip
+EnginePath.txt
